[package]
edition = "2021"
name = "task-manager-cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.0.4", features = ["derive"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
